src/test/deca/context/valid/created/class-extends-decl_field2.deca
//Description :
// Test de decl d'un objet de type incompatible
//
// Resultats :
// Erreur


class Premiere{
int x;

}

class Seconde extends Premiere{
protected int x;
}

{
}
