src/test/deca/context/invalid/created/object_class1.deca
//Description :
//B n'existe pas
//
// Resultats :
// Erreur

class A extends B{}
